--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Wow! This is my first Homepage!</h1>
-<p>To be continue...</p>
-
+<div class="jumbotron">
+	<h1>Wow! This is my first Homepage!</h1>
+	<p>To be continue...</p>
+	<p>Sign up and check the most updated information.</p>
+	<p><%= link_to "Sign up HERE" , "#" , class: "btn btn-success" %></p>
+</div>
