Changed the Homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-<div class="jumbotron">
-	<h1>Wow! This is my first Homepage!</h1>
-	<p>To be continue...</p>
-	<p>Sign up and check the most updated information.</p>
-	<p><%= link_to "Sign up HERE" , "#" , class: "btn btn-success" %></p>
+<div class="jumbotron center">
+	<h1>Wow! Welcome to my Apps</h1>
+	<p>
+		<%= link_to "Login" , "#" , class: "btn btn-default btn-lg" %>
+		<%= link_to "Sign Up" , "#" , class: "btn btn-primary btn-lg" %>
+	</p>
 </div>
