--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Home' , root_path %></li>
+        <li><%= link_to 'New Pin', new_pin_path %></li>
         <li><%= link_to 'About Us' , about_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
